--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 primaryColor="#14A335"
 backgroundColor="#094217"
 secondaryBackgroundColor="#1b5C2A"
-textColor="#A2E0B0"
+textColor="#EB2323"
 font="sans serif"
