--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 primaryColor="#14A335"
 backgroundColor="#094217"
 secondaryBackgroundColor="#1b5C2A"
-textColor="#E6B5B5"
-font="sans serif"
+textColor="#B5E6C9"
+font="monospace"
