--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -5,6 +5,7 @@ backgroundColor="#094217"
 secondaryBackgroundColor="#1b5C2A"
 textColor="#B5E6C9"
 font="monospace"
+[theme]
 base="light"
 primaryColor="#87E0AB"
 backgroundColor="#93D9AF"
